Update prototype state and filter behavior
- Update navgiation topic highlighting
- Add format checkbox filter option
- Remove clickable card topic tags; disable links

--- a/dev/prototypes/courses/comp-1.html
+++ b/dev/prototypes/courses/comp-1.html
@@ -65,25 +65,31 @@
         <h2>View by Format</h2>
         <ul>
           <li>
-            <a href="#full"><b>Full Course</b></a>
+            <br>
             <p>Earn a certificate in 1 hour or more.</p>
           </li>
           <li>
-            <a href="#short"><b>Short Course</b></a>
+            <br>
             <p>Earn a badge in 1 hour or less.</p>
           </li>
           <li>
-            <a href="#tutorial"><b>Tutorial</b></a>
+            <br>
             <p>Learn a new skill in 5 minutes or less.</p>
-          </li>
-          <li>
-            <a href="#view-all-formats"><b>View All Formats</b></a>
           </li>
         </ul>
       </div>
     </nav>
   </div>
 </header>
+
+<label for="toggle-full" class="toggle-label">Full Course</label>
+<input type="checkbox" value="selected" class="toggle-input" id="toggle-full" checked>
+
+<label for="toggle-short" class="toggle-label">Short Course</label>
+<input type="checkbox" value="selected" class="toggle-input" id="toggle-short" checked>
+
+<label for="toggle-tutorial" class="toggle-label">Tutorial</label>
+<input type="checkbox" value="selected" class="toggle-input" id="toggle-tutorial" checked>
 
 <ul role="list">
 <!-- FULL COURSES -->
