Rename, add meta support for featured jobs

--- a/jobs/featured/index.html
+++ b/jobs/featured/index.html
@@ -12,7 +12,7 @@ permalink: /jobs/featured/
 
   <p class="hero-text">A graphic representation of data abstracted from the Chinese program’s thrust, a worrying impression of solid fluidity, as though the shards of a broken mirror bent and elongated as they rotated, but it never told the correct time.</p>
 
-  {%- assign feat_jobs = site.data.featured-jobs | sort -%}
+  {%- assign feat_jobs = site.data.featured_jobs | sort -%}
 
   {%- if feat_jobs.size > 0 -%}
     {%- for jobs in feat_jobs -%}
