--- a/dev/prototypes/courses/comp-2.html
+++ b/dev/prototypes/courses/comp-2.html
@@ -24,7 +24,7 @@
 <div class="topic" id="career-skills">
 <div class="topic" id="productivity">
 <div class="topic" id="time-management">
-<div class="topic" id="all-courses">
+<div class="topic" id="all">
 <div class="format" id="full">
 <div class="format" id="short">
 <div class="format" id="tutorial">
