update local config (trigger a build)

--- a/feeds/jobs.html
+++ b/feeds/jobs.html
@@ -3,7 +3,7 @@ layout: null
 permalink: /feeds/jobs.json
 ---
 {%- comment -%}
-This component spits out a statically-generated fallback feed for the jobs module (just in case dynamic JSON loading doesn't work)
+This component spews out a statically-generated fallback feed for the jobs module (just in case dynamic JSON loading doesn't work)
 {%- endcomment -%}
 {%- if site.data.jobs -%}
 {{ site.data.jobs | replace: "=>", ":" }}
