Add prototype version 2
- Add prototype version 2
- Rename folders by version

--- a/dev/prototypes/courses/version-1/index.html
+++ b/dev/prototypes/courses/version-1/index.html
@@ -1,6 +1,6 @@
-<link rel="preload" href="{{ site.url }}/dev/prototypes/courses/css/main.css?{{ site.time | date:'%s' }}" as="style">
-<link rel="stylesheet" href="{{ site.url }}/dev/prototypes/courses/css/main.css?{{ site.time | date:'%s' }}">
-<script src="{{ site.url }}/dev/prototypes/courses/js/main.js?{{ site.time | date:'%s' }}" defer></script>
+<link rel="preload" href="{{ site.url }}/dev/prototypes/courses/version-1/css/main.css?{{ site.time | date:'%s' }}" as="style">
+<link rel="stylesheet" href="{{ site.url }}/dev/prototypes/courses/version-1/css/main.css?{{ site.time | date:'%s' }}">
+<script defer src="{{ site.url }}/dev/prototypes/courses/version-1/js/main.js?{{ site.time | date:'%s' }}"></script>
 
 <div id="comp">
 
@@ -29,7 +29,7 @@
 <div class="format" id="short">
 <div class="format" id="tutorial">
 
-<main id="courses" is="comp-2">
+<main id="courses">
 
 <header>
   <div>
@@ -49,6 +49,9 @@
           </li>
           <li>
             <a href="#ux"><b>UX</b></a>
+          </li>
+          <li>
+            <a href="#prototyping"><b>Prototyping</b></a>
           </li>
           <li>
             <a href="#accessibility"><b>Accessibility</b></a>
