--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -110,6 +110,18 @@
 <input type="checkbox" value="selected" class="input-toggle" id="toggle-tutorial" checked>
 
 <ul class="courses" id="catalog" role="list">
+  <li>
+    <ul role="list">
+      <li class="message view-all">
+        <header>
+          <h2>
+            <a class="courses-refresh" href="#all">Oops! Let’s Find You A Course</a>
+          </h2>
+          <a class="button courses-refresh" href="#all"><b>View All Categories</b></a>
+        </header>
+      </li>
+    </ul>
+  </li>
   <li class="full">
     <header>
       <h2>Full Courses</h2>
@@ -612,6 +624,14 @@
   </aside>
   </li>
  -->
+  <li class="message sans-course">
+    <header>
+      <h2>
+        No Full Course, Try a Short Course or Tutorial Instead
+      </h2>
+      <!-- <a class="button courses-refresh" href="#all"><b>View All Categories</b></a> -->
+    </header>
+  </li>
     </ul>
   </li>
   <li class="short">
@@ -3184,16 +3204,6 @@
   </li>
     </ul>
   </li>
-  <!--
-  <li class="response" hidden>
-    <header>
-      <h2>
-        <a class="courses-refresh" href="#all">Oops! Let’s Find You That Course…</a>
-      </h2>
-      <a class="button courses-refresh" href="#all"><b>View All Courses</b></a>
-    </header>
-  </li>
- -->
 </ul>
 
 </main>
