Update prototype sort option structure and styling
- Add label to heading
- Update sort by rulesets
- Update select element font-size
- Remove unused rulesets

--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -82,16 +82,13 @@
         </ul>
       </div>
       <div class="sort-by">
-        <h2>Sort by</h2>
-        <div class="sort-by">
-          <!-- <label for="select-layout" class="select-label">Sort by:</label> -->
-          <select name="sorts" id="select-sort" autocomplete="off">
-            <option value="newest" selected>Newest to Oldest</option>
-            <option value="oldest" >Oldest to Newest</option>
-            <option value="beginner">Easy to Difficult</option>
-            <option value="intermediate">Difficult to Easy</option>
-          </select>
-        </div>
+        <h2><label for="select-layout" class="select-label">Sort by</label></h2>
+        <select name="sorts" id="select-sort" autocomplete="off">
+          <option value="newest" selected>Newest to Oldest</option>
+          <option value="oldest" >Oldest to Newest</option>
+          <option value="beginner">Easy to Difficult</option>
+          <option value="intermediate">Difficult to Easy</option>
+        </select>
       </div>
     </nav>
   </div>
