Logic & copy changes
Web Design > Design
Web Accessibility > Accessibility

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -12,7 +12,7 @@ permalink: /courses/take5/
   <header class="take5--about" id="about">
     <div class="container">
       <h1>Take 5</h1>
-      <p><strong>Learn a new skill in 5 minutes.</strong> Video tutorials on accessibility, career skills, prototyping, user experience, and web design and development.</p>
+      <p><strong>Learn a new skill in 5 minutes.</strong> Video tutorials on design, development, accessibility, prototyping, UX, and career skills.</p>
     </div>
   </header>
 
