--- a/dev/prototypes/courses/version-1/index.html
+++ b/dev/prototypes/courses/version-1/index.html
@@ -974,7 +974,7 @@
       <div>
         <dl>
           <dt><b>Skills Covered</b></dt>
-          <dd>Web accessibility</dd>
+          <dd>Accessibility</dd>
           <dd>Responsive design</dd>
           <dd>Intermediate HTML/CSS</dd>
         </dl>
