--- a/feeds/featured-courses.html
+++ b/feeds/featured-courses.html
@@ -36,7 +36,7 @@ valid json for any number of courses.
     {%- assign content_color = "#5ca5a0" -%}
 {%- elsif site.data.courses[featured].topic == "User Experience" -%}
     {%- assign content_color = "#5ca5a0" -%}
-{%- elsif site.data.courses[featured].topic == "Web Design & Development" -%}
+{%- elsif site.data.courses[featured].topic == "Design & Development" -%}
     {%- assign content_color = "#d73158" -%}
 {%- else -%}
     {%- assign content_color = "#ccc" -%}
