--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -12,7 +12,7 @@ permalink: /accessibility/
           <div class="col-md-12">
             <header>
               <h1>Accessibility</h1>
-              <p>Explore our free collection of web accessibility <a href="#courses"><b>courses</b></a>, <a href="#tutorials"><b>tutorials</b></a>, <a href="#webinars"><b>webinars</b></a>, <a href="#articles"><b>articles</b></a>, <a href="#resources"><b>resources</b></a>, and <a href="#services"><b>services</b></a>.</p>
+              <p>Explore our free collection of accessibility <a href="#courses"><b>courses</b></a>, <a href="#tutorials"><b>tutorials</b></a>, <a href="#webinars"><b>webinars</b></a>, <a href="#articles"><b>articles</b></a>, <a href="#resources"><b>resources</b></a>, and <a href="#services"><b>services</b></a>.</p>
             </header>
             <div class="cols cols-max-3" id="featured">
               <ul>
@@ -231,7 +231,7 @@ permalink: /accessibility/
                   </li>
                   <li>
                     <h3><a href="https://medium.com/gymnasium/i-can-see-clearly-now-color-and-accessibility-in-design-1fe6382755ff" target="_blank" rel="noopener">I Can See Clearly Now: Color and Accessibility in Design</a></h3>
-                    <p>Read up on the role of color in web accessibility and how to design with inclusion in mind.</p>
+                    <p>Read up on the role of color in accessibility and how to design with inclusion in mind.</p>
                   </li>
                   <li>
                     <h3><a href="https://justingagne.design/words/rethinking-accessible-drop-caps/" target="_blank" rel="noopener">Rethinking Accessible Drop Caps</a></h3>
@@ -249,7 +249,7 @@ permalink: /accessibility/
             <div class="section-content">
               <header>
                 <h2 class="all-caps">Accessibility Resources</h2>
-                <p>All the basics and tools to get started with web accessibility.</p>
+                <p>All the basics and tools to get started with accessibility.</p>
               </header>
               <div class="subsection list-hr">
                 <header>
@@ -280,7 +280,7 @@ permalink: /accessibility/
                     <h3><a href="http://universaldesign.ie/technology-ict/web-and-mobile-app-accessibility/web-accessibility-techniques/content-provider-s-introduction-and-index/" target="_blank" rel="noopener">Guidelines for Content Providers and Editors</a></h3>
                   </li>
                   <li>
-                    <h3><a href="https://webaim.org/resources/designers/" target="_blank" rel="noopener">Web Accessibility for Designers</a></h3>
+                    <h3><a href="https://webaim.org/resources/designers/" target="_blank" rel="noopener">Accessibility for Designers</a></h3>
                   </li>
                   <li>
                     <h3><a href="https://www.accessibility-developer-guide.com" target="_blank" rel="noopener">Accessibility Developer Guide</a></h3>
