--- a/take5/catalog-blitz.html
+++ b/take5/catalog-blitz.html
@@ -18,7 +18,7 @@ permalink: /take5/blitz
   <header class="take5--about" id="about">
     <div class="container">
       <h1>Take 5</h1>
-      <p><strong>Take 5 minutes to learn a practical skill with Take 5 video tutorials.</strong> Topics covered include web design and development, user experience, prototyping, and career skills. Check back here for new videos every day this month. Just watch and learn.</p>
+      <p><strong>Take 5 minutes to learn a practical skill with Take 5 video tutorials.</strong> Topics covered include design and development, user experience, prototyping, and career skills. Check back here for new videos every day this month. Just watch and learn.</p>
     </div>
   </header>
 
