Add course description, sidebar, tests

--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -458,7 +458,7 @@
     <summary><b>Overview</b></summary>
     <div class="info-details">
       <p>
-        Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in web design and development.
+        Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in design and development.
       </p>
       <a class="button" href="{{ site.gymurl }}/courses/GYM/103/0/about"><b>Learn More</b></a>
       <a class="button" href="{{ site.gymurl }}/courses/GYM/103/0/info"><b>Enroll Now</b></a>
