--- a/hub-pages/ux-design/index.html
+++ b/hub-pages/ux-design/index.html
@@ -118,7 +118,7 @@ permalink: /ux-design/
               {
                 "@type": "Course",
                 "name": "UX Fundamentals",
-                "description": "Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in web design and development.",
+                "description": "Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in design and development.",
                 "image": "{{ site.url }}/img/social/courses/gym-103-social.png",
                 "url": "https://thegymnasium.com/courses/GYM/103/0/about",
                 "position": 1,
