--- a/tests/featurer.html
+++ b/tests/featurer.html
@@ -34,7 +34,7 @@ featured_courses: GYM-016, GYM-103, GYM-001
     {%- assign content_color = "#5ca5a0" -%}
 {%- elsif site.data.courses[featured].topic == "User Experience" -%}
     {%- assign content_color = "#5ca5a0" -%}
-{%- elsif site.data.courses[featured].topic == "Web Design & Development" -%}
+{%- elsif site.data.courses[featured].topic == "Design & Development" -%}
     {%- assign content_color = "#d73158" -%}
 {%- else -%}
     <strong>ERROR!</strong>🚧
