--- a/dev/prototypes/courses/version-1/index.html
+++ b/dev/prototypes/courses/version-1/index.html
@@ -236,7 +236,7 @@
     <details class="info"> <summary><b>Description</b></summary>
     <div class="info-details">
       <p>
-        Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in web design and development.
+        Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in design and development.
       </p>
       <div>
         <dl>
