Update prototype card
- Update GYM-102 certificate note markup

--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -541,7 +541,12 @@
           <dd>JavaScript Developers</dd>
         </dl>
       </div>
-      <p class="note">Full Courses include a series of video lessons, optional quizzes and assignments, and a final exam and certificate if you pass.</p>
+      <div class="note">
+        <dl>
+          <dt><b>Earn a Certificate</b></dt>
+          <dd>Full Courses include a series of video lessons, optional quizzes and assignments, and a final exam and certificate if you pass.</dd>
+        </dl>
+      </div>
       <div>
         <dl>
           <dt><b>Video Lessons</b></dt>
