Update prototype format language
- Update full/short courses language
- Remove full/short courses time commitment

--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -67,12 +67,12 @@
           <li>
             <label for="toggle-full-ui" class="label-toggle"><b>Full Course</b></label>
             <input type="checkbox" value="selected" class="input-toggle" id="toggle-full-ui" checked>
-            <p>Earn a certificate in 22 hours or less.</p>
+            <p>Learn new skills and earn a certificate.</p>
           </li>
           <li>
             <label for="toggle-short-ui" class="label-toggle"><b>Short Course</b></label>
             <input type="checkbox" value="selected" class="input-toggle" id="toggle-short-ui" checked>
-            <p>Earn a badge in 4 hours or less.</p>
+            <p>Learn new skills and earn a badge.</p>
           </li>
           <li>
             <label for="toggle-tutorial-ui" class="label-toggle"><b>Tutorial</b></label>
