Update prototype content
- Update course completion language
- Update topic fragments

--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -5,25 +5,11 @@
 <div id="comp">
 
 <div class="topic" id="design">
-<div class="topic" id="html">
-<div class="topic" id="css">
-<div class="topic" id="figma">
-<div class="topic" id="sketch">
-<div class="topic" id="adobe-xd">
-<div class="topic" id="invision-studio">
-<div class="topic" id="virtual-reality">
-<div class="topic" id="accessibility">
-<div class="topic" id="design-systems">
-<div class="topic" id="data-visualization">
 <div class="topic" id="development">
-<div class="topic" id="javascript">
-<div class="topic" id="php">
-<div class="topic" id="github">
 <div class="topic" id="ux">
 <div class="topic" id="prototyping">
+<div class="topic" id="accessibility">
 <div class="topic" id="career-skills">
-<div class="topic" id="productivity">
-<div class="topic" id="time-management">
 <div class="topic" id="all">
 <div class="format" id="full">
 <div class="format" id="short">
@@ -163,7 +149,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>16 Hours</dd>
+          <dd>Up to 16 Hours</dd>
         </dl>
       </div>
     </div>
@@ -230,7 +216,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>12 Hours</dd>
+          <dd>Up to 12 Hours</dd>
         </dl>
       </div>
     </div>
@@ -294,7 +280,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>22 Hours</dd>
+          <dd>Up to 22 Hours</dd>
         </dl>
       </div>
     </div>
@@ -361,7 +347,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>17 Hours</dd>
+          <dd>Up to 17 Hours</dd>
         </dl>
       </div>
     </div>
@@ -425,7 +411,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>21 Hours</dd>
+          <dd>Up to 21 Hours</dd>
         </dl>
       </div>
     </div>
@@ -490,7 +476,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>12 Hours</dd>
+          <dd>Up to 12 Hours</dd>
         </dl>
       </div>
     </div>
@@ -554,7 +540,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>17 Hours</dd>
+          <dd>Up to 17 Hours</dd>
         </dl>
       </div>
     </div>
@@ -680,7 +666,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>1.5 Hours</dd>
+          <dd>Up to 1.5 Hours</dd>
         </dl>
       </div>
     </div>
@@ -742,7 +728,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>1.5 Hours</dd>
+          <dd>Up to 1.5 Hours</dd>
         </dl>
       </div>
     </div>
@@ -805,7 +791,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>1.5 Hours</dd>
+          <dd>Up to 1.5 Hours</dd>
         </dl>
       </div>
     </div>
@@ -867,7 +853,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>1 Hours</dd>
+          <dd>Up to 1 Hours</dd>
         </dl>
       </div>
     </div>
@@ -929,7 +915,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>2 Hours</dd>
+          <dd>Up to 2 Hours</dd>
         </dl>
       </div>
     </div>
@@ -992,7 +978,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>1.5 Hours</dd>
+          <dd>Up to 1.5 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1053,7 +1039,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>4 Hours</dd>
+          <dd>Up to 4 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1116,7 +1102,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>4 Hours</dd>
+          <dd>Up to 4 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1177,7 +1163,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>2 Hours</dd>
+          <dd>Up to 2 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1238,7 +1224,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>3 Hours</dd>
+          <dd>Up to 3 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1298,7 +1284,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>2.5 Hours</dd>
+          <dd>Up to 2.5 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1359,7 +1345,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>2 Hours</dd>
+          <dd>Up to 2 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1420,7 +1406,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>2 Hours</dd>
+          <dd>Up to 2 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1483,7 +1469,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>2 Hours</dd>
+          <dd>Up to 2 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1544,7 +1530,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>5 Hours</dd>
+          <dd>Up to 5 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1606,7 +1592,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>3 Hours</dd>
+          <dd>Up to 3 Hours</dd>
         </dl>
       </div>
     </div>
@@ -1667,7 +1653,7 @@
         </dl>
         <dl>
           <dt><b>Course Completion</b></dt>
-          <dd>1.5 Hours</dd>
+          <dd>Up to 1.5 Hours</dd>
         </dl>
       </div>
     </div>
@@ -3207,20 +3193,6 @@
 
 </main>
 
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
 </div>
 </div>
 </div>
