Update prototype layout
- Update layout for smaller width breakpoints
- Update View All Categories card

--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -95,7 +95,7 @@
       <li class="message view-all">
         <header>
           <h2>
-            <a class="courses-refresh" href="#all">Oops! Let’s Find You A Course</a>
+            Hmm… Let’s Find You A Course
           </h2>
           <a class="button courses-refresh" href="#all"><b>View All Categories</b></a>
         </header>
