Update prototype tutorial description
- Update description for consistency

--- a/dev/prototypes/courses/version-2/index.html
+++ b/dev/prototypes/courses/version-2/index.html
@@ -63,7 +63,7 @@
           <li>
             <label for="toggle-tutorial-ui" class="label-toggle"><b>Tutorial</b></label>
             <input type="checkbox" value="selected" class="input-toggle" id="toggle-tutorial-ui" checked>
-            <p>Learn a new skill in 5 minutes or less.</p>
+            <p>Learn new skills in 5 minutes or less.</p>
           </li>
         </ul>
       </div>
