--- a/jobs/index.html
+++ b/jobs/index.html
@@ -44,7 +44,7 @@ permalink: /jobs/
                     <h3 class="all-caps">Onsite & Remote Opportunities</h3>
                   </div>
                   <div class="card-cta card-cta-button">
-                    <a class="gym-button" href="#remote-work"><b>Search Jobs</b></a>
+                    <a class="gym-button" href="#jobs"><b>Search Jobs</b></a>
                   </div>
                 </div>
               </article>
