Update Jobs page resources link titles and URLs

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -156,7 +156,7 @@ permalink: /jobs/
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/top-free-portfolio-sites" target="_blank" rel="noopener">Top 5 Free Portfolio Sites</a>
+              <a href="https://vitamintalent.com/blog/top-5-free-portfolio-sites" target="_blank" rel="noopener">Top 5 Free Portfolio Sites for Creatives</a>
             </h3>
             </li>
           </ul>
@@ -185,7 +185,7 @@ permalink: /jobs/
             </li>
             <li>
             <h3>
-              <a href="https://vitamintalent.com/blog/7-non-technical-skills-every-creative-needs-to-land-the-job" target="_blank" rel="noopener">7 Non-Technical Skills Every Creative Needs to Land the Job</a>
+              <a href="https://vitamintalent.com/blog/top-10-must-ask-interview-questions-for-designers" target="_blank" rel="noopener">Top 10 Must-Ask Interview Questions for Designers</a>
             </h3>
             </li>
             <li>
