--- a/hub-pages/accessibility/index.html
+++ b/hub-pages/accessibility/index.html
@@ -257,7 +257,7 @@ permalink: /accessibility/
                 </header>
                 <ul>
                   <li>
-                    <h3><a href="http://bit.ly/3kNINc3" target="_blank" rel="noopener">How to Get Started with Digital Accessibility</a></h3>
+                    <h3><a href="https://brand.aquent.com/Accessibility?utm_source=partner&utm_medium=web&utm_campaign=AQ_UK_gymnasium&utm_content=2021" target="_blank" rel="noopener">How to Get Started with Digital Accessibility</a></h3>
                     <p>Learn how (and why) to make digital accessibility a priority with Aquent’s PDF guide.</p>
                   </li>
                   <li>
@@ -277,7 +277,7 @@ permalink: /accessibility/
                 </header>
                 <ul>
                   <li>
-                    <h3><a href="http://universaldesign.ie/technology-ict/web-and-mobile-app-accessibility/web-accessibility-techniques/content-provider-s-introduction-and-index/" target="_blank" rel="noopener">Guidelines for Content Providers and Editors</a></h3>
+                    <h3><a href="https://universaldesign.ie/technology-ict/web-and-mobile-app-accessibility/web-accessibility-techniques/content-provider-s-introduction-and-index/" target="_blank" rel="noopener">Guidelines for Content Providers and Editors</a></h3>
                   </li>
                   <li>
                     <h3><a href="https://webaim.org/resources/designers/" target="_blank" rel="noopener">Accessibility for Designers</a></h3>
@@ -324,7 +324,7 @@ permalink: /accessibility/
               <div class="list-hr">
                 <ul>
                   <li>
-                    <h3><a href="https://aquent.com/services/aquent-studios" target="_blank" rel="noopener">Projects</a></h3>
+                    <h3><a href="https://aquent.com/services/studio-services" target="_blank" rel="noopener">Projects</a></h3>
                     <p>If you’re looking to outsource accessibility projects, Aquent Studios can assemble and lead a team of accessibility experts and specialists in design, development, experience, and content to achieve your goals.</p>
                   </li>
                   <li>
