Update Remote Work page links
- Update Search Jobs fragment
- Update redirects

--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -46,7 +46,7 @@ permalink: /remote-work/
                         <h3 class="all-caps">Remote Work That Best Fits Your Skills</h3>
                       </div>
                       <div class="card-cta card-cta-button">
-                        <a class="gym-button" href="#remote-work"><b>Find Work</b></a>
+                        <a class="gym-button" href="#jobs"><b>Find Work</b></a>
                       </div>
                     </div>
                   </article>
@@ -126,7 +126,7 @@ permalink: /remote-work/
               <p>A free downloadable PDF guide to the latest salary benchmarks in the UK.</p>
             </li>
             <li>
-              <h3><a href="https://irreverentmike.substack.com/people/2325264" target="_blank" rel="noopener">Mike Bifulco’s Substack Articles</a></h3>
+              <h3><a href="https://substack.com/profile/2325264-mike-bifulco" target="_blank" rel="noopener">Mike Bifulco’s Substack Articles</a></h3>
               <p>Thoughtful words and observations by Mike Bifulco, Director of Technology at Aquent Gymnasium.</p>
             </li>
           </ul>
@@ -214,7 +214,7 @@ permalink: /remote-work/
           </header>
           <ul>
             <li>
-              <h3><a href="https://help.github.com/en/github/teaching-and-learning-with-github-education/about-github-education-for-educators-and-researchers" target="_blank" rel="noopener">About GitHub Education for Educators and Researchers</a></h3>
+              <h3><a href="https://docs.github.com/en/github/teaching-and-learning-with-github-education/about-github-education-for-educators-and-researchers" target="_blank" rel="noopener">About GitHub Education for Educators and Researchers</a></h3>
             </li>
             <li>
               <h3><a href="https://education.github.com/pack" target="_blank" rel="noopener">GitHub Student Developer Pack</a></h3>
@@ -257,7 +257,7 @@ permalink: /remote-work/
           </header>
           <ul>
             <li>
-              <h3><a href="https://github.com/LisaDziuba/Awesome-Design-Tools" target="_blank" rel="noopener">Awesome Design Tools</a></h3>
+              <h3><a href="https://github.com/goabstract/Awesome-Design-Tools" target="_blank" rel="noopener">Awesome Design Tools</a></h3>
             </li>
           </ul>
         </div>
