--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -7,7 +7,7 @@ permalink: /collections/
 <main id="main" role="main">
   <header class="collections--about" id="about">
     <div class="container">
-      <h1>Collections</h1>
+      <h1>Content Collections</h1>
       <p>Explore a specific topic and learn practical skills with free courses, tutorials, and resources.</p>
     </div>
   </header>
